# plasma-i3-tool

./: .gitignore  CMakeLists.txt  README.md  default.nix  main.c
